fixed navbar overlap with ace editors

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -10,7 +10,7 @@ $breakpoint: 800px;
   background: $nav-background;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 5;
   a:hover {
     color: $link-hover-color;
   }
